plugins {
	id 'fabric-loom' version '1.7-SNAPSHOT'
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	maven {
		url = "https://cursemaven.com"
	}

	maven {
		name = "Modrinth"
		url = "https://api.modrinth.com/maven"
	}

	maven {
		url = "https://maven.kyrptonaught.dev"
	}

	maven {
		url = "https://maven.repository.redhat.com/ga/"
	}

	maven {
		url = "https://s01.oss.sonatype.org/content/repositories/snapshots"
	}

	flatDir {
		dirs 'libs'
	}
}

fabricApi {
	configureDataGeneration()
}

loom {

	runs {
		server {
			runDir = "run-server"
		}
	}

    splitEnvironmentSourceSets()

	mods {
		"mtwmod" {
			sourceSet sourceSets.main
			sourceSet sourceSets.client
		}
	}

	accessWidenerPath = file("src/main/resources/mtwmod.accesswidener")
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

	// Implementation
	for (String mod : [
			project.modmenu_version,
			project.voicechat_version,
			project.command_macros_version
	]) {
		modImplementation "maven.modrinth:$mod"
	}

	// Compile Only
	for (String mod : [
			project.axiom_version,
			project.command_block_ide_version,
			project.pehkui_version
	]) {
		modCompileOnly "maven.modrinth:$mod"
	}

	modRuntimeOnly "dev.mtwmod:mtwmod-resource:1.0.5"
//	modRuntimeOnly "libs:banner:1.21.1-7"
//	modRuntimeOnly project(":mtw-resource")
//	include modImplementation("dev.mtwmod:mtwmod-skinpreset:1.0.1")
//	include modImplementation("dev.mtwmod:mtwmod-animation:1.0.0")
	include modImplementation("dev.mtwmod:better-third-person:1.1.0")
	include "libs:${project.modernkeybinding_verson}"
//	include "maven.modrinth:${project.better_fabric_console_version}"
	modApi include("dev.mtwmod:kyrptconfig:1.6.1-1.21")
//	modApi "maven.modrinth:rrls:Ip08v0S2"
//	modImplementation "dev.mtwmod:improved-animations:1.0.2"

	implementation "dnsjava:dnsjava:3.5.3"

//	var ultralight_version = '0.0.2-SNAPSHOT'
//
//	include implementation("net.janrupf.ultralight:ultralight-java-reborn-core:$ultralight_version")
//	var ultralight_jni = "net.janrupf.ultralight:ultralight-java-reborn-platform-jni:$ultralight_version"
//	include implementation(ultralight_jni)

//	for (String arch : ["linux-x64", "win-x64", "mac-x64"]) {
//		implementation "$ultralight_jni:$arch"
//	}
}

processResources {
	dependsOn ":mtw-resource:processResources"

	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.base.archivesName.get()}"}
	}
}